<resources>
    <string name="app_name">Temperature Converter</string>
    <string name="result_celsius">Result celsius</string>
    <string name="result_fahrenheit">Result Fahrenheit</string>
    <string name="result_kelvin">Result Kelvin</string>
    <string name="MainText">Convertidor de grados.
    Introduce el total de grados</string>
    <string name="hint_addNumber">Introduzca un número</string>
    <string name="button_fahrenheit">Fahrenheit</string>
    <string name="button_kelvin">Kelvin</string>
    <string name="button_celsius">Celsius</string>
    <string name="txt_about">Created by: github.com/DavidHdez8</string>
    <string name="result1">Resultado:</string>
    <string name="result2">Resultado</string>
</resources>
